--- a/config/AWWayofTime.cfg
+++ b/config/AWWayofTime.cfg
@@ -498,12 +498,17 @@ wellofsufferingblacklist {
     B:Techguns.ArmySoldier=false
     B:Techguns.AttackHelicopter=false
     B:Techguns.Bandit=false
+    B:Techguns.Commando=false
     B:Techguns.CyberDemon=false
     B:"Techguns.Dictator Dave"=false
+    B:Techguns.DictatorDave=false
     B:Techguns.Outcast=false
     B:"Techguns.Psycho Steve"=false
+    B:Techguns.PsychoSteve=false
     B:Techguns.SimpleTurret=false
     B:"Techguns.Skeleton Soldier"=false
+    B:Techguns.SkeletonSoldier=false
+    B:Techguns.Stormtrooper=false
     B:Techguns.TGDummySpawn=false
     B:Techguns.Turret=false
     B:Techguns.ZombieFarmer=false
