--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -5205,6 +5205,7 @@ eln {
     B:ElnSixNode.7940=false
     B:ElnSixNode.7941=false
     B:ElnSixNode.7942=false
+    B:ElnSixNode.7943=false
     B:ElnTransparentNode=false
     B:ElnghostBlock=false
     B:ElnlightBlock=false
@@ -23993,6 +23994,7 @@ tconstruct {
 techguns {
     B:BioBlobSmall=false
     B:TGMonsterSpawner=false
+    B:TGMonsterSpawner.1=false
     B:acid=false
     B:airMarker=false
     B:basicMachine=false
@@ -24075,6 +24077,8 @@ techguns {
     B:oreTitanIron.1=true
     B:sandbags=false
     B:screen=true
+    B:tgchest=false
+    B:tgchestweapon=false
 }
 
 
