--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -784,8 +784,6 @@ shedding {
     I:HarderWildlife.Goat.lexiconDisplaySize=40
     I:HarderWildlife.Goat.metadata=0
     I:HarderWildlife.Goat.rate=-1
-
-    # Configuration of Shedding for HarderWildlife.Lizard
     S:HarderWildlife.Lizard.item=
     I:HarderWildlife.Lizard.lexiconDisplaySize=40
     I:HarderWildlife.Lizard.metadata=0
@@ -1202,8 +1200,6 @@ shedding {
     I:SnowMan.lexiconDisplaySize=40
     I:SnowMan.metadata=0
     I:SnowMan.rate=-1
-
-    # Configuration of Shedding for Souls.Soul
     S:Souls.Soul.item=
     I:Souls.Soul.lexiconDisplaySize=40
     I:Souls.Soul.metadata=0
@@ -1263,41 +1259,65 @@ shedding {
     I:Techguns.Bandit.metadata=0
     I:Techguns.Bandit.rate=-1
 
+    # Configuration of Shedding for Techguns.Commando
+    S:Techguns.Commando.item=
+    I:Techguns.Commando.lexiconDisplaySize=40
+    I:Techguns.Commando.metadata=0
+    I:Techguns.Commando.rate=-1
+
     # Configuration of Shedding for Techguns.CyberDemon
     S:Techguns.CyberDemon.item=
     I:Techguns.CyberDemon.lexiconDisplaySize=40
     I:Techguns.CyberDemon.metadata=0
     I:Techguns.CyberDemon.rate=-1
-
-    # Configuration of Shedding for Techguns.Dictator Dave
     S:"Techguns.Dictator Dave.item"=
     I:"Techguns.Dictator Dave.lexiconDisplaySize"=40
     I:"Techguns.Dictator Dave.metadata"=0
     I:"Techguns.Dictator Dave.rate"=-1
+
+    # Configuration of Shedding for Techguns.DictatorDave
+    S:Techguns.DictatorDave.item=
+    I:Techguns.DictatorDave.lexiconDisplaySize=40
+    I:Techguns.DictatorDave.metadata=0
+    I:Techguns.DictatorDave.rate=-1
 
     # Configuration of Shedding for Techguns.Outcast
     S:Techguns.Outcast.item=
     I:Techguns.Outcast.lexiconDisplaySize=40
     I:Techguns.Outcast.metadata=0
     I:Techguns.Outcast.rate=-1
-
-    # Configuration of Shedding for Techguns.Psycho Steve
     S:"Techguns.Psycho Steve.item"=
     I:"Techguns.Psycho Steve.lexiconDisplaySize"=40
     I:"Techguns.Psycho Steve.metadata"=0
     I:"Techguns.Psycho Steve.rate"=-1
+
+    # Configuration of Shedding for Techguns.PsychoSteve
+    S:Techguns.PsychoSteve.item=
+    I:Techguns.PsychoSteve.lexiconDisplaySize=40
+    I:Techguns.PsychoSteve.metadata=0
+    I:Techguns.PsychoSteve.rate=-1
 
     # Configuration of Shedding for Techguns.SimpleTurret
     S:Techguns.SimpleTurret.item=
     I:Techguns.SimpleTurret.lexiconDisplaySize=40
     I:Techguns.SimpleTurret.metadata=0
     I:Techguns.SimpleTurret.rate=-1
-
-    # Configuration of Shedding for Techguns.Skeleton Soldier
     S:"Techguns.Skeleton Soldier.item"=
     I:"Techguns.Skeleton Soldier.lexiconDisplaySize"=40
     I:"Techguns.Skeleton Soldier.metadata"=0
     I:"Techguns.Skeleton Soldier.rate"=-1
+
+    # Configuration of Shedding for Techguns.SkeletonSoldier
+    S:Techguns.SkeletonSoldier.item=
+    I:Techguns.SkeletonSoldier.lexiconDisplaySize=40
+    I:Techguns.SkeletonSoldier.metadata=0
+    I:Techguns.SkeletonSoldier.rate=-1
+
+    # Configuration of Shedding for Techguns.Stormtrooper
+    S:Techguns.Stormtrooper.item=
+    I:Techguns.Stormtrooper.lexiconDisplaySize=40
+    I:Techguns.Stormtrooper.metadata=0
+    I:Techguns.Stormtrooper.rate=-1
 
     # Configuration of Shedding for Techguns.TGDummySpawn
     S:Techguns.TGDummySpawn.item=
@@ -2768,6 +2788,8 @@ shedding {
     I:jurassicraft.velociraptor.lexiconDisplaySize=40
     I:jurassicraft.velociraptor.metadata=0
     I:jurassicraft.velociraptor.rate=-1
+
+    # Configuration of Shedding for lootablebodies_EntityLootableBody
     S:lootablebodies_EntityLootableBody.item=
     I:lootablebodies_EntityLootableBody.lexiconDisplaySize=40
     I:lootablebodies_EntityLootableBody.metadata=0
