--- a/config/Eln.cfg
+++ b/config/Eln.cfg
@@ -9,7 +9,13 @@ balancing {
     I:autominerRange=10
     D:batteryCapacityFactor=1.0
     I:fuelGeneratorPowerFactor=1
+    D:fuelHeatFurnacePowerFactor=1.0
+
+    # Factor to apply when converting real word heat values to Minecraft heat values (1mB = 1l).
+    D:fuelHeatValueFactor=6.75E-5
     I:heatTurbinePowerFactor=1
+    I:platesPerIngot=1
+    I:solarPanelPowerFactor=1
     I:solarPannelPowerFactor=1
 
     # Display more detailed WAILA info on some machines
@@ -37,6 +43,7 @@ debug {
 
 
 dictionary {
+    B:chips=true
     B:tungsten=false
 }
 
