--- a/config/Techguns.cfg
+++ b/config/Techguns.cfg
@@ -6,10 +6,22 @@ clientside {
 
     # Enable the gore Death Effect, requires DeathEffects to be enabled, pure clientside check. [default: true]
     B:EnableGoreDeathEffect=true
+
+    # Multiply the FOV while sprinting by this value independent from the actual speed, has no effect when LockSpeedDependantFov is false, pure clientside check. [range: 1.0 ~ 10.0, default: 1.15]
+    S:FixedSprintFovMultiplier=1.15
+
+    # Counters the speed dependant FOV change. This also stops FOV changes while sprinting. Don't activate if another mod does this too, pure clientside check. [default: true]
+    B:LockSpeedDependantFov=true
 }
 
 
 "damage factors" {
+    # Multiplier to armor penetration from NPCs to players. Set to 0 to deactivate armor penetration [range: 0.0 ~ 1.0, default: 1.0]
+    S:ArmorPenetrationMultiplierNPCtoPlayer=1.0
+
+    # Multiplier to armor penetration in PvP. Set to 0 to deactivate armor penetration [range: 0.0 ~ 1.0, default: 1.0]
+    S:ArmorPenetrationMultiplierPvP=1.0
+
     # Damage factor for all NPCs other than turrets, they already have a difficulty dependent damage penalty, this can be used to further reduce their damage, or increase it ;-) [range: 0.0 ~ 100.0, default: 1.0]
     S:DamageFactorNPC=1.0
 
@@ -39,11 +51,15 @@ general {
 
     # Should Structures (military bases) be spawned in the world? [default: true]
     B:SpawnStructures=true
-
-    # Every X chunks it's tried to spawnn a small building. This is in both dimensions, ChunkX, and ChunkY modulo <this Value> must be 0 [range: 1 ~ 100000, default: 16]
     I:StructureSpawnWeight=128
 
-    # Every X chunks it's tried to spawnn a BIG building. This is in both dimensions, ChunkX, and ChunkY modulo <this Value> must be 0 [range: 1 ~ 100000, default: 8]
+    # Every X chunks it's tried to spawnn a Big building. This is in both dimensions, ChunkX, and ChunkY modulo <this Value> must be 0 [range: 1 ~ 100000, default: 16]
+    I:StructureSpawnWeightBig=16
+
+    # Every X chunks it's tried to spawnn a Medium building. This is in both dimensions, ChunkX, and ChunkY modulo <this Value> must be 0 [range: 1 ~ 100000, default: 12]
+    I:StructureSpawnWeightMedium=12
+
+    # Every X chunks it's tried to spawnn a Small building. This is in both dimensions, ChunkX, and ChunkY modulo <this Value> must be 0 [range: 1 ~ 100000, default: 8]
     I:StructureSpawnWeightSmall=256
 
     # Craft bronze ingot with 3 copper and 1 tin. Disable if other mod adds bronze [default: false]
@@ -69,6 +85,9 @@ general {
 
     # Add Steel nuggets and crafting, if Techguns steel is not added, it tries to add them to the first Steel found in the OreDict [default: false]
     B:addSteelNuggets=false
+
+    # Disable automatic feeding of Food in the Techguns tab. Disable autofeeding if you think it breaks the balance of a hardcore food mod. [default: false]
+    B:disableAutofeeder=false
 
     # Generate Copper and Tin Ore, disable if other mod does. (TE and Mekansim) [default: false]
     B:doOreGenCopperTin=false
@@ -97,6 +116,15 @@ general {
 
 
 "npc spawn" {
+    # Up to which distance to worldspawn only mobs with danger level up to 0 will spawn [range: 0 ~ 2147483647, default: 500]
+    I:DistanceSpawnLevel0=500
+
+    # Up to which distance to worldspawn only mobs with danger level up to 1 will spawn [range: 0 ~ 2147483647, default: 1000]
+    I:DistanceSpawnLevel1=1000
+
+    # Up to which distance to worldspawn only mobs with danger level up to 2 will spawn [range: 0 ~ 2147483647, default: 2500]
+    I:DistanceSpawnLevel2=2500
+
     # Spawn weight for spawning Bandit groups, at 0 spawn will not be registered [range: 0 ~ 10000, default: 50]
     I:SpawnWeightBandit=50
 
@@ -130,11 +158,109 @@ general {
 
 
 "ore drills" {
+    # Get Ore cluster amount multipliers for: iron,gold,redstone,coal,lapis,diamond,emerald,copper,tin,lead,osmium,silver,nickel,aluminium,platinum,uranium
+    D:oreClusterMultipliersAmount <
+        2.0
+        1.0
+        1.0
+        1.2
+        1.0
+        0.25
+        0.25
+        2.0
+        2.0
+        1.0
+        1.0
+        1.0
+        1.0
+        1.0
+        0.35
+        0.25
+     >
+
+    # Get Ore cluster amount multipliers for: nether quartz, titanium, certus quartz, oil, glowstone, OTHERS UNUSED...
+    D:oreClusterMultipliersAmount2 <
+        1.5
+        0.5
+        1.5
+        1.0
+        1.5
+        1.0
+        1.0
+        1.0
+        1.0
+        1.0
+        1.0
+        1.0
+        1.0
+        1.0
+        1.0
+        1.0
+     >
+
+    # Get Ore cluster Power multipliers for: iron,gold,redstone,coal,lapis,diamond,emerald,copper,tin,lead,osmium,silver,nickel,aluminium,platinum,uranium
+    D:oreClusterMultipliersPower <
+        0.15
+        0.4
+        0.3
+        0.25
+        0.3
+        1.0
+        1.0
+        0.1
+        0.1
+        0.2
+        0.3
+        0.35
+        0.3
+        0.2
+        1.0
+        1.0
+     >
+
+    # Get Ore cluster Power multipliers for: nether quartz, titanium, certus quartz, oil, glowstone, OTHERS UNUSED...
+    D:oreClusterMultipliersPower2 <
+        0.35
+        0.8
+        0.4
+        0.5
+        0.35
+        1.0
+        1.0
+        1.0
+        1.0
+        1.0
+        1.0
+        1.0
+        1.0
+        1.0
+        1.0
+        1.0
+     >
+
+    # Multiplier to calculate value of furnace fuel burn time = RF for ore Drill. burnTime* <THIS_VALUE> = RF. Only for internal use of the ore Drill, no real RF generation. [range: 1.0 ~ 100000.0, default: 1000.0]
+    S:oreDrillFuelMultiplier=1000.0
+
+    # Fuel value for Liquid BioFuel (MFR) for use in ore Drills, this is per Millibucket, not Bucket, so 1/1000 of bucket value [range: 1.0 ~ 100000.0, default: 48.0]
+    S:oreDrillFuelValueBioFuel=48.0
+
+    # Fuel value for Liquid Fuel for use in ore Drills, this is per Millibucket, not Bucket, so 1/1000 of bucket value [range: 1.0 ~ 100000.0, default: 96.0]
+    S:oreDrillFuelValueFuel=96.0
+
     # Multiplier to default rate on how many ores an ore drill produces [range: 0.001 ~ 1000.0, default: 1.0]
     S:oreDrillMultiplierOre=1.0
 
     # Multiplier to default rate on how much power an ore drill requires [range: 0.0 ~ 1000.0, default: 1.0]
     S:oreDrillMultiplierPower=1.0
+}
+
+
+"spawn controll" {
+    # How often should an oil hole spawn. every chunk the chance is rolled as float[0-1] and checked if <this value. [range: 0.0 ~ 1.0, default: 0.05]
+    S:oilHoleFrequency=0.05
+
+    # Should Oil holes (Oil ore cluster) be spawned? Has no effect If no OIL is present. [default: true]
+    B:spawnOilHoles=true
 }
 
 
