--- a/config/Traincraft.cfg
+++ b/config/Traincraft.cfg
@@ -1,6 +1,8 @@
 # Configuration file
 
 general {
+    # This will disable some of Traincrafts easier recipes to balance Modpacks [default: false]
+    B:BETTER_MODPACKS=false
     B:DISABLE_FLICKERING=true
     B:ENABLE_CHUNK_LOADING=true
     B:ENABLE_COPPER_SPAWN=false
@@ -24,15 +26,6 @@ general {
 
 
 mysql {
-    # MySQL logger is ment to log train place, destroy, color, create and explode events to your local MYSQL server. 
-    # This will NOT send any information elsewhere. 
-    # Logged events can be used on webpage (if you know how to program in PhP or any other WEB scripting language) 
-    # to track history of every train or just track, who has done something recently. 
-    # This ONLY works on dedicated servers, ONLY the OWNER of the SERVER must setup the url, the username and password for his mysql server where stats will be sent 
-    # That means this system DOESN'T have access to ANY of the CLIENT informations 
-    # The url will be handled like so in the code: String url ='jdbc:mysql://' +ConfigHandler.MYSQL_URL; 
-    # If you have questions about this code please contact 
-    # Spitfire4466 and/or DragonBornSR (author of the mysql part and owner of thesociety.eu Traincraft server: http://forum.thesociety.eu)
     B:MYSQL_ENABLE=false
     S:MYSQL_PASSWORD=your password
     S:MYSQL_URL=some url
