--- a/config/advRocketry/advancedRocketry.cfg
+++ b/config/advRocketry/advancedRocketry.cfg
@@ -37,6 +37,9 @@ asteroid {
         oreSulfur
         oreUranium
      >
+
+    # True if the ores in standardOres should a be blacklist, false for whitelist
+    B:standardOres_blacklist=false
 }
 
 
@@ -50,6 +53,26 @@ biomes {
     I:oceanSpires=98
     I:spaceBiomeId=93
     I:stormLandsBiomeId=94
+}
+
+
+##########################################################################################################
+# client
+#--------------------------------------------------------------------------------------------------------#
+# UI locations can by set by clicking and dragging the middle mouse button ingame
+##########################################################################################################
+
+client {
+    # If UI is not locked, the middle mouse can be used to drag certain AR UIs around the screen, positions are saved on hitting quit in the menu
+    B:lockUI=true
+    I:oxygenBarModeX=0
+    I:oxygenBarModeY=1
+    I:oxygenBarX=-8
+    I:oxygenBarY=57
+    I:suitPanelModeX=-1
+    I:suitPanelModeY=-1
+    I:suitPanelX=8
+    I:suitPanelY=8
 }
 
 
@@ -99,6 +122,9 @@ general {
     S:entityAtmBypass <
      >
 
+    # Amount of force the jetpack provides with respect to gravity, 1 is the same acceleration as caused by Earth's gravity, 2 is 2x the acceleration caused by Earth's gravity, etc.  To make jetpack only work on low gravity planets, simply set it to a value less than 1
+    D:jetPackForce=1.3
+
     # List of oredictionary names of ores allowed to be mined by the laser drill if surface drilling is disabled
     S:laserDrillOres <
         oreIron
@@ -109,8 +135,14 @@ general {
         oreDiamond
      >
 
+    # True if the ores in laserDrillOres should be a blacklist, false for whitelist
+    B:laserDrillOres_blacklist=false
+
     # If true the orbital laser will actually mine blocks on the planet below
     B:laserDrillPlanet=false
+
+    # If true the boots only protect the player on planets with low gravity
+    B:lowGravityBoots=false
 
     # If true the machines from AdvancedRocketry will produce things like plates/rods for other mods even if Advanced Rocketry itself does not use the material (This can increase load time)
     B:makeMaterialsForOtherMods=true
@@ -127,6 +159,9 @@ general {
 
     # If true the Oxygen scrubbers require a consumable carbon collection cartridge
     B:scrubberRequiresCartrige=true
+
+    # Amount of power per tick the solar generator should produce
+    I:solarGeneratorMultiplier=1
 
     # Laser drill will not mine these dimension [default: ]
     S:spaceLaserDimIdBlackList <
@@ -185,6 +220,9 @@ general {
         oreTin
         oreRedstone
      >
+
+    # True if the ores in geodeOres should be a blacklist, false for whitelist
+    B:geodeOres_blacklist=false
 }
 
 
@@ -194,6 +232,9 @@ performance {
 
     # BitMask: 0: no threading, radius based; 1: threading, radius based (EXP); 2: no threading volume based; 3: threading volume based (EXP)
     I:atmosphereCalculationMethod=0
+
+    # Radius of the O2 vent.  if atmosphereCalculationMethod is 2 or 3 then max volume is calculated from this radius.  WARNING: larger numbers can lead to lag
+    I:oxygenVentSize=32
 }
 
 
