--- a/config/butterflymania.cfg
+++ b/config/butterflymania.cfg
@@ -22,6 +22,18 @@ entitynames {
 }
 
 
+world--1760718102059111643 {
+    I:extinct-115=23
+    I:extinct-134=24
+    I:extinct-148=22
+    I:extinct-154=24
+    I:extinct-156=12
+    I:extinct-201=27
+    I:extinct-43=21
+    I:extinct-88=28
+}
+
+
 world--6053546774151357621 {
     I:extinct-115=29
     I:extinct-134=21
@@ -43,6 +55,18 @@ world-166746739182352355 {
     I:extinct-201=30
     I:extinct-43=12
     I:extinct-88=15
+}
+
+
+world-3161233867447317328 {
+    I:extinct-115=16
+    I:extinct-134=20
+    I:extinct-148=18
+    I:extinct-154=12
+    I:extinct-156=13
+    I:extinct-201=25
+    I:extinct-43=12
+    I:extinct-88=21
 }
 
 
