--- a/config/HarderWildlife.cfg
+++ b/config/HarderWildlife.cfg
@@ -43,7 +43,7 @@ animals {
 
     # This is a global aging rate.  It causes animals to age more quickly or not at all.
     #  [range: 0 ~ 10, default: 1]
-    I:GlobalAgeRate=1
+    I:GlobalAgeRate=0
 
     # How often herbivores will kill a block of grass or leaves, in ticks, reducing food supply.
     #  [range: 100 ~ 20000, default: 3000]
@@ -76,7 +76,7 @@ crops {
     # Note: please disable Gany's Surface's snow accumulation, if it is
     # installed (mine results in a smoother variation between blocks).
     #  [default: true]
-    B:EnableCropSlowing=true
+    B:EnableCropSlowing=false
 
     # Enables or disables the crop growth based on biome information (which is effected by seasons,
     # if enabled and ignored if slow crops is disabled). Most (vanilla) biomes have some semblance of a
@@ -85,7 +85,7 @@ crops {
     # this might be required!
     # If disabled, base slowdown probability is used instead.
     #  [default: true]
-    B:EnableCropSlowingByBiome=true
+    B:EnableCropSlowingByBiome=false
 
     # Configures the worst possible growth rate for biome based crop growth.
     # In the worst possible conditions, the chance that crops will grow will not drop
@@ -134,11 +134,11 @@ seasons {
      >
 
     # Allows snow to pile up when it snows and melt away again. [default: true]
-    B:EnableSnowAccumulation=false
+    B:EnableSnowAccumulation=true
 
     # Problems with frozen oceans? Try turning this on.
     # It will make any ice block that gets an update tick melt if the temp is > 0.2 (20F) [default: false]
-    B:InstantlyUnfreezeIce=false
+    B:InstantlyUnfreezeIce=true
 
     # Enable to see baseline temp/rain modifiers in console. [default: false]
     B:LogWeather=false
