--- a/config/MCA.cfg
+++ b/config/MCA.cfg
@@ -30,7 +30,7 @@ general {
     S:"Dimension whitelist"=0, 1, -1
 
     # Allows you to toggle the Patreon button on and off.
-    B:"Disable patreon button"=false
+    B:"Disable patreon button"=true
 
     # True if hearts increase decreases after multiple interactions.
     B:"Enable diminishing returns?"=true
@@ -135,7 +135,7 @@ privacy {
     B:"Allow crash reporting"=true
 
     # True if MCA can check for updates. This setting requires a restart in order to take effect.
-    B:"Allow update checking"=true
+    B:"Allow update checking"=false
 }
 
 
@@ -174,7 +174,7 @@ server {
     S:"Villager chat prefix"=
 
     # How many villagers maximum that can be within a 32 block radius of any villager spawner block.
-    I:"Villager spawner cap"=16
+    I:"Villager spawner cap"=12
 }
 
 
