--- a/config/SpecialAI.cfg
+++ b/config/SpecialAI.cfg
@@ -67,10 +67,10 @@ jockeys {
 
 passive_griefing {
     # (True/false) If true, mobs will passively grief you while not doing anything else. Default is true.
-    B:_enabled=true
+    B:_enabled=false
 
     # (True/false) If true, mobs will passively flip switches, press buttons, etc. while not doing anything else (uses the same range, reach, etc. as griefing, but has separate entity and block lists). Default is true.
-    B:_fiddling_enabled=true
+    B:_fiddling_enabled=false
 
     # (True/false) If true, block breaking AI will automatically target all light sources. Default is true.
     B:break_lights=true
