--- a/config/ZombieAwareness/Features.cfg
+++ b/config/ZombieAwareness/Features.cfg
@@ -8,7 +8,7 @@
     B:awareness_Scent=false
 
     # Spawn sound sense sources for monsters to track
-    B:awareness_Sound=true
+    B:awareness_Sound=false
 
     # Spawn extra zombies in caves where other zombies already are if dark and away from player until Spawning.extraSpawningMaxCount is reached
     B:extraSpawningCave=true
