--- a/config/AWWayofTime.cfg
+++ b/config/AWWayofTime.cfg
@@ -431,6 +431,7 @@ wellofsufferingblacklist {
     B:Celebrity=false
     B:Chicken=false
     B:"ChromatiCraft.Ball Lightning"=false
+    B:ChromatiCraft.GlowCloud=false
     B:Cow=false
     B:Creeper=false
     B:DraconicEvolution.ChaosCrystal=false
@@ -509,6 +510,9 @@ wellofsufferingblacklist {
     B:"Techguns.Skeleton Soldier"=false
     B:Techguns.SkeletonSoldier=false
     B:Techguns.Stormtrooper=false
+    B:Techguns.SuperMutantBasic=false
+    B:Techguns.SuperMutantElite=false
+    B:Techguns.SuperMutantHeavy=false
     B:Techguns.TGDummySpawn=false
     B:Techguns.Turret=false
     B:Techguns.ZombieFarmer=false
