--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -435,6 +435,12 @@ shedding {
     I:"ChromatiCraft.Ball Lightning.metadata"=0
     I:"ChromatiCraft.Ball Lightning.rate"=-1
 
+    # Configuration of Shedding for ChromatiCraft.GlowCloud
+    S:ChromatiCraft.GlowCloud.item=
+    I:ChromatiCraft.GlowCloud.lexiconDisplaySize=40
+    I:ChromatiCraft.GlowCloud.metadata=0
+    I:ChromatiCraft.GlowCloud.rate=-1
+
     # Configuration of Shedding for Cow
     S:Cow.item=
     I:Cow.lexiconDisplaySize=40
@@ -1319,13 +1325,29 @@ shedding {
     I:Techguns.Stormtrooper.metadata=0
     I:Techguns.Stormtrooper.rate=-1
 
+    # Configuration of Shedding for Techguns.SuperMutantBasic
+    S:Techguns.SuperMutantBasic.item=
+    I:Techguns.SuperMutantBasic.lexiconDisplaySize=40
+    I:Techguns.SuperMutantBasic.metadata=0
+    I:Techguns.SuperMutantBasic.rate=-1
+
+    # Configuration of Shedding for Techguns.SuperMutantElite
+    S:Techguns.SuperMutantElite.item=
+    I:Techguns.SuperMutantElite.lexiconDisplaySize=40
+    I:Techguns.SuperMutantElite.metadata=0
+    I:Techguns.SuperMutantElite.rate=-1
+
+    # Configuration of Shedding for Techguns.SuperMutantHeavy
+    S:Techguns.SuperMutantHeavy.item=
+    I:Techguns.SuperMutantHeavy.lexiconDisplaySize=40
+    I:Techguns.SuperMutantHeavy.metadata=0
+    I:Techguns.SuperMutantHeavy.rate=-1
+
     # Configuration of Shedding for Techguns.TGDummySpawn
     S:Techguns.TGDummySpawn.item=
     I:Techguns.TGDummySpawn.lexiconDisplaySize=40
     I:Techguns.TGDummySpawn.metadata=0
     I:Techguns.TGDummySpawn.rate=-1
-
-    # Configuration of Shedding for Techguns.Turret
     S:Techguns.Turret.item=
     I:Techguns.Turret.lexiconDisplaySize=40
     I:Techguns.Turret.metadata=0
