--- a/config/Reika/ChromatiCraft.cfg
+++ b/config/Reika/ChromatiCraft.cfg
@@ -3,6 +3,7 @@
 "biome ids" {
     I:"Ender Forest Biome ID"=47
     S:"Luminous Cliffs Biome ID"=49
+    S:"Luminous Cliffs Edge Biome ID"=50
     I:"Rainbow Forest Biome ID"=48
 }
 
@@ -85,6 +86,7 @@
 "enchantment ids" {
     I:"Aggro Mask ID"=92
     S:"Air Miner ID"=97
+    S:"Armor Breach ID"=98
     I:"Ender Lock ID"=91
     S:"Harvest Boost ID"=96
     S:"Rapid Descent ID"=95
@@ -147,6 +149,7 @@
     B:Silverwood=true
     B:Slime=true
     B:Sorting=true
+    B:Tainted=true
     B:Tigerwood=true
     B:Timewood=true
     B:Transformation=true
