--- a/config/Reika/VoidMonster.cfg
+++ b/config/Reika/VoidMonster.cfg
@@ -7,6 +7,7 @@
         -112
         -100
      >
+    B:"Dimension list is actually whitelist"=false
     I:"Sound Interval in Ticks"=80
     D:"Void Monster Difficulty Factor"=1.0
 }
