--- a/config/Techguns.cfg
+++ b/config/Techguns.cfg
@@ -53,13 +53,13 @@ general {
     B:SpawnStructures=true
     I:StructureSpawnWeight=128
 
-    # Every X chunks it's tried to spawnn a Big building. This is in both dimensions, ChunkX, and ChunkY modulo <this Value> must be 0 [range: 1 ~ 100000, default: 16]
+    # Every X chunks it's tried to spawnn a Big building. This is in both dimensions, ChunkX, and ChunkY modulo <this Value> must be 0 [range: 1 ~ 100000, default: 64]
     I:StructureSpawnWeightBig=16
 
-    # Every X chunks it's tried to spawnn a Medium building. This is in both dimensions, ChunkX, and ChunkY modulo <this Value> must be 0 [range: 1 ~ 100000, default: 12]
+    # Every X chunks it's tried to spawnn a Medium building. This is in both dimensions, ChunkX, and ChunkY modulo <this Value> must be 0 [range: 1 ~ 100000, default: 32]
     I:StructureSpawnWeightMedium=12
 
-    # Every X chunks it's tried to spawnn a Small building. This is in both dimensions, ChunkX, and ChunkY modulo <this Value> must be 0 [range: 1 ~ 100000, default: 8]
+    # Every X chunks it's tried to spawnn a Small building. This is in both dimensions, ChunkX, and ChunkY modulo <this Value> must be 0 [range: 1 ~ 100000, default: 16]
     I:StructureSpawnWeightSmall=256
 
     # Craft bronze ingot with 3 copper and 1 tin. Disable if other mod adds bronze [default: false]
@@ -67,6 +67,9 @@ general {
 
     # Add nuggets and crafting for Copper (Tin and Bronze are not in use), needed with only Mekanism, Not needed with TE [default: false]
     B:addCopperTinBronzeNuggets=false
+
+    # Add an empty oreCluster block that can get types added through minetweaker [default: false]
+    B:addCustomOreCluster=false
 
     # Add Iron nuggets and crafting [default: false]
     B:addIronNuggets=false
