--- a/config/Traincraft.cfg
+++ b/config/Traincraft.cfg
@@ -1,7 +1,6 @@
 # Configuration file
 
 general {
-    # This will disable some of Traincrafts easier recipes to balance Modpacks [default: false]
     B:BETTER_MODPACKS=false
     B:DISABLE_FLICKERING=true
     B:ENABLE_CHUNK_LOADING=true
@@ -17,6 +16,9 @@ general {
     B:ENABLE_TENDERS=true
     B:ENABLE_TRACKS_BUILDER=true
     B:ENABLE_ZEPPELIN=true
+
+    # This will disable some of Traincrafts easier recipes to balance Modpacks [default: false]
+    B:MAKE_MODPACKS_GREAT_AGAIN=false
     B:REAL_TRAIN_SPEED=false
 
     # This will disable the chat messages telling you the possible colors when spawning new trains and when coloring them with dye
