--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -4540,10 +4540,13 @@ chromaticraft {
     B:chromaticraftblockantkey.3=false
     B:chromaticraftblockantkey.5=false
     B:chromaticraftblockantkey.7=false
+    B:chromaticraftblockartefact=false
     B:chromaticraftblockavolamp=false
     B:chromaticraftblockbridge=false
     B:chromaticraftblockbridgecontrol=false
+    B:chromaticraftblockcaveindicator=true
     B:chromaticraftblockchroma=false
+    B:chromaticraftblockcliffstone=true
     B:chromaticraftblockcoloraltar=false
     B:chromaticraftblockcolorlock=false
     B:chromaticraftblockconsole=false
@@ -4555,7 +4558,24 @@ chromaticraft {
     B:chromaticraftblockdimgen=false
     B:chromaticraftblockdimgentile=false
     B:chromaticraftblockdoor=false
+    B:chromaticraftblockdummyaux=false
     B:chromaticraftblockdye=true
+    B:chromaticraftblockdyeflower=false
+    B:chromaticraftblockdyeflower.1=false
+    B:chromaticraftblockdyeflower.10=false
+    B:chromaticraftblockdyeflower.11=false
+    B:chromaticraftblockdyeflower.12=false
+    B:chromaticraftblockdyeflower.13=false
+    B:chromaticraftblockdyeflower.14=false
+    B:chromaticraftblockdyeflower.15=false
+    B:chromaticraftblockdyeflower.2=false
+    B:chromaticraftblockdyeflower.3=false
+    B:chromaticraftblockdyeflower.4=false
+    B:chromaticraftblockdyeflower.5=false
+    B:chromaticraftblockdyeflower.6=false
+    B:chromaticraftblockdyeflower.7=false
+    B:chromaticraftblockdyeflower.8=false
+    B:chromaticraftblockdyeflower.9=false
     B:chromaticraftblockdyegrass=false
     B:chromaticraftblockdyeleaf=false
     B:chromaticraftblockdyesapling=false
@@ -4567,6 +4587,7 @@ chromaticraft {
     B:chromaticraftblockender=false
     B:chromaticraftblockeverfluid=false
     B:chromaticraftblockfence=false
+    B:chromaticraftblockfloatingrelay=false
     B:chromaticraftblockglass=false
     B:chromaticraftblockglow=false
     B:chromaticraftblockglowleaf=false
@@ -4609,8 +4630,10 @@ chromaticraft {
     B:chromaticraftblockrainbowcrystal=false
     B:chromaticraftblockrainbowleaf=false
     B:chromaticraftblockrainbowsapling=false
+    B:chromaticraftblockredstonepod=false
     B:chromaticraftblockrelay=false
     B:chromaticraftblockrelayfilter=false
+    B:chromaticraftblockrepeaterlamp=false
     B:chromaticraftblockrift=false
     B:chromaticraftblockrouternode=false
     B:chromaticraftblockrune=true
@@ -4653,10 +4676,12 @@ chromaticraft {
     B:chromaticraftblocktilemodelled=false
     B:chromaticraftblocktilemodelled2=false
     B:chromaticraftblocktilemodelled3=false
+    B:chromaticraftblocktilemodelled4=false
     B:chromaticraftblocktileplant=false
     B:chromaticraftblocktnt=false
     B:chromaticraftblocktrail=false
     B:chromaticraftblockvoidrift=false
+    B:chromaticraftblockwaterlock=false
 }
 
 
@@ -5425,6 +5450,7 @@ expandedredstone {
     B:expandedredstoneblockcamo=false
     B:expandedredstoneblockfullblock=false
     B:expandedredstoneblockthintile=false
+    B:expandedredstoneblockthintile2=false
     B:expandedredstoneblockwire=false
 }
 
