--- a/config/advRocketry/advancedRocketry.cfg
+++ b/config/advRocketry/advancedRocketry.cfg
@@ -98,9 +98,13 @@ general {
 
     # Power multiplier for the laser drill machine
     D:LaserDrillPowerMultiplier=1.0
+    D:MicrowaveRecieverMulitplier=1.0
 
     # Multiplier for the amount of energy produced by the microwave reciever
-    D:MicrowaveRecieverMulitplier=1.0
+    D:MicrowaveRecieverMultiplier=1.0
+
+    # how many millibuckets/t are required to keep the terraformer running
+    I:TerraformerFluidConsumeRate=40
     B:TerraformerRequiresFluids=true
 
     # If true players will respawn near beds on planets IF the spawn location is in a breathable atmosphere
@@ -212,6 +216,12 @@ general {
     B:generateAluminum=false
     B:generateDilithium=false
 
+    # If true then ore-containing geodes are generated on high pressure planets
+    B:generateGeodes=true
+
+    # average size of the geodes
+    I:geodeBaseSize=36
+
     # List of oredictionary names of ores allowed to spawn in geodes
     S:geodeOres <
         oreIron
@@ -223,6 +233,9 @@ general {
 
     # True if the ores in geodeOres should be a blacklist, false for whitelist
     B:geodeOres_blacklist=false
+
+    # variation in geode size
+    I:geodeVariation=24
 }
 
 
