--- a/config/betterquesting.cfg
+++ b/config/betterquesting.cfg
@@ -11,7 +11,7 @@ TitleCard {
 
 general {
     # Hide update notifications [default: false]
-    B:"Hide Updates"=false
+    B:"Hide Updates"=true
 
     # Clamps the max UI height (-1 to disable) [range: -1 ~ 2147483647, default: -1]
     I:"Max GUI Height"=-1
