--- a/config/enviromine/profiles/default/CustomProperties/ChromatiCraft.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/ChromatiCraft.cfg
@@ -888,18 +888,18 @@ dimension {
     Chroma {
         I:"01.Dimension ID"=60
         B:"02.Allow Config Override"=true
-        B:"03.Track Sanity"=true
+        B:"03.Track Sanity"=false
         B:"04.Dark Affects Sanity"=true
         D:"05.Sanity Multiplier"=1.0
-        B:"06.Track Air Quility"=true
+        B:"06.Track Air Quility"=false
         D:"07.Air Quility Multiplier"=1.0
-        B:"08.Track Hydration"=true
+        B:"08.Track Hydration"=false
         D:"09.Hydration Multiplier"=1.0
-        B:"10.Track Temperature"=true
+        B:"10.Track Temperature"=false
         D:"11.Temperature Multiplier"=1.0
         B:"12.Day/Night Affects Temp"=true
         B:"13.Weather Affects Temp"=true
-        B:"14.Generate Mineshafts"=true
+        B:"14.Generate Mineshafts"=false
         I:"15.Where is Sea Level"=340
 
         # Use a negitive value to skip shaft entrance checks [range: -255 ~ 255, default: 12]
@@ -908,7 +908,7 @@ dimension {
         D:"18.Base Hydration Rate"=0.0
         D:"19.Base Sanity Rate"=0.0
         D:"20.Base Air Quality Rate"=0.0
-        B:"20.Enable Physics"=true
+        B:"20.Enable Physics"=false
     }
 
 }
