--- a/config/Reika/ChromatiCraft.cfg
+++ b/config/Reika/ChromatiCraft.cfg
@@ -188,6 +188,7 @@
 "potion ids" {
     I:"Growth Hormone ID"=36
     S:"Lumarhea ID"=64
+    S:"Lumen Regen ID"=135
     I:"Regen ID"=39
     I:"Saturation ID"=38
     S:"Void Gaze ID"=41
